Add admin interface to manage offices (#32)
* Adding route to empty page

* Adding edit form for offices

* Adding REST requests for offices

* Displaying offices

* Adding delete office endpoint

* Improving styling of offices page

* Adding individual edit page for office

* Using admin routes

* Removing unintended spaces

* Adding database migration for office details

* Supporting deletion of offices

* Setting location and URL on office update

* Adding tooltips

* Adding edit office interface for admins and sharing current state on changing database constraints

* Fixing endless loop on retrieving recurring reservations

* Fixing down migrations

* Adding on delete cascade to foreign keys

* Fixing office edit view if no office defined

* Displaying if no workplaces were found and refactoring workplaceReservationTable

* Calculating and storing whether user isAdmin

* Fixing AuthProvider bug

* Adding button that links to office and workplace creation if no workplaces are created yet

* Adding keys to workplaces on office page

---------
